Removed PMD's Check style
SVN-Revision: 23379